--- a/Paramdomizer/Form2.resx
+++ b/Paramdomizer/Form2.resx
@@ -120,4 +120,8 @@
   <metadata name="tooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="chkTRSpellSlotSize.ToolTip" xml:space="preserve">
+    <value>Randomize spell slot size by generating random numbers instead of shuffling vanilla values. (on rare cases a spell will cost 3 or 0 slots)
+Don't Randomize by Shuffle needs to be on for this to function.</value>
+  </data>
 </root>
