--- a/Paramdomizer/Form1.resx
+++ b/Paramdomizer/Form1.resx
@@ -117,9 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="tooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="tooltip.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>17, 17</value>
-  </metadata>
+  </data>
   <data name="checkBoxLoadFromBackup.ToolTip" xml:space="preserve">
     <value>If paramdomizer randomized your game in the past, it will load an unrandomized backup before randomizing again.
 useful to remove some of the effects of the randomizer before randomizing it again.
@@ -147,13 +148,12 @@ Will make the straightsword hilt have no stat requirements to use to prevent som
 Also shuffles starting level.</value>
   </data>
   <data name="checkBoxForceUseableStartSpells.ToolTip" xml:space="preserve">
-    <value>Any spells / pyromancies / miracles that a class starts with will have their stat requirements lowered if that class can't cast it at their starting level.
-Also effects starting caster tools like the pyromancy flame and sorcerer's catalyst.</value>
+    <value>Any spells / pyromancies / miracles that a class starts with will have their stat requirements lowered if that class can't cast it at their starting level.</value>
   </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.TrayHeight" type="System.Int32, mscorlib">
     <value>48</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
